[project]
name = "shipzo_plus"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
sum1='shipzo_plus.shipzo_plus:sum'

[tool.pdm]
distribution = true
